force-app/main/default/objects/Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>