force-app/main/default/objects/Lead__c/validationRules/Stage_Backward_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Backward_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(Status__c ,
&quot;New&quot;,1,
&quot;Contacted&quot;,2,
&quot;Nurturing&quot;,3,
&quot;Qualified&quot;,4,
&quot;Converted&quot;,5,0)&lt;
CASE(PRIORVALUE(Status__c),
&quot;New&quot;,1,
&quot;Contacted&quot;,2,
&quot;Nurturing&quot;,3,
&quot;Qualified&quot;,4,
&quot;Converted&quot;,5,0)</errorConditionFormula>
    <errorMessage>You can&apos;t choose the previous stage!</errorMessage>
</ValidationRule>