force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>LeadSource__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>