force-app/main/default/objects/Lead__c/listViews/Campaing_Leads.listView-meta.xml
<ListView>
    <fullName>Campaing_Leads</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>LeadSource__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Campaing Leads</label>
</ListView>