force-app/main/default/objects/Lead__c/listViews/Today_Leads.listView-meta.xml
<ListView>
    <fullName>Today_Leads</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Address__City__s</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/16/2023 12:00 AM</value>
    </filters>
    <label>Today Leads</label>
</ListView>