force-app/main/default/objects/Lead__c/listViews/Web_Leads.listView-meta.xml
<ListView>
    <fullName>Web_Leads</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Address__City__s</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LeadSource__c</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <label>Web Leads</label>
</ListView>